src/test/deca/syntax/parser/invalid/inst_expr_print_add_parenthese.deca
// Test de parser, une parenthèse fermante avant la fin du print

{
    print() 5 );
}